# gmail-invoice-extractor

./: .gitignore  README.md  main.py  pyproject.toml
tests/: test_main.py
